--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,20 @@
     @apply bg-primary
   }
 }
+
+.jobs{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+@media (min-width: 400px) {
+  .jobs{
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
+  .jobs{
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
