update resources and routes

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,8 @@
   }
 }
 
+
+.profilePhoto {
+  width: 100px; /* Set the width of the container */
+  height: 100px; /* Set the height of the container */
+}
