--- a/app/globals.css
+++ b/app/globals.css
@@ -14,26 +14,28 @@
   }
 }
 
-.jobs{
+.jobs {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 @media (min-width: 400px) {
-  .jobs{
-      grid-template-columns: repeat(2, minmax(0, 1fr));
+  .jobs {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1024px) {
-  .jobs{
-      grid-template-columns: repeat(3, minmax(0, 1fr));
+  .jobs {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
 
 .profilePhoto {
-  width: 100px; /* Set the width of the container */
-  height: 100px; /* Set the height of the container */
+  width: 100px;
+  /* Set the width of the container */
+  height: 100px;
+  /* Set the height of the container */
 }
 
 
@@ -41,12 +43,14 @@
 .lds-ripple div {
   box-sizing: border-box;
 }
+
 .lds-ripple {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
 }
+
 .lds-ripple div {
   position: absolute;
   border: 4px solid currentColor;
@@ -54,9 +58,11 @@
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
+
 .lds-ripple div:nth-child(2) {
   animation-delay: -0.5s;
 }
+
 @keyframes lds-ripple {
   0% {
     top: 36px;
@@ -65,6 +71,7 @@
     height: 8px;
     opacity: 0;
   }
+
   4.9% {
     top: 36px;
     left: 36px;
@@ -72,6 +79,7 @@
     height: 8px;
     opacity: 0;
   }
+
   5% {
     top: 36px;
     left: 36px;
@@ -79,6 +87,7 @@
     height: 8px;
     opacity: 1;
   }
+
   100% {
     top: 0;
     left: 0;
@@ -92,5 +101,6 @@
 @keyframes spin {
   100% {
     transform: rotate(1turn);
+  }
 }
-}
+
