--- a/app/globals.css
+++ b/app/globals.css
@@ -104,3 +104,57 @@
   }
 }
 
+.skeleton-image {
+  position: relative;
+  overflow: hidden;
+}
+
+.skeleton-image::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -200px; 
+  width: 56px;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
+  animation: shimmer-image 2s infinite linear;
+}
+
+.skeleton-content p{
+  position: relative;
+  overflow: hidden;
+}
+
+.skeleton-content p::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -200px;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
+  animation: shimmer 2s infinite linear;
+  animation-delay: 3.2s;
+}
+
+@keyframes shimmer-image {
+  0% {
+    left: -200px;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+
+@keyframes shimmer {
+  0% {
+    left: -200px; /* Start position */
+  }
+  100% {
+    left: 100%; /* End position */
+  }
+}
+
+
+
