--- a/app/globals.css
+++ b/app/globals.css
@@ -162,3 +162,7 @@
     /* End position */
   }
 }
+
+.filter-option__values{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
