Finish right side of job details desktop

--- a/app/globals.css
+++ b/app/globals.css
@@ -163,6 +163,15 @@
   }
 }
 
-.filter-option__values{
+.filter-option__values {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+.job-details-desktop::-webkit-scrollbar {
+  display: none;
+}
+
+.job-details-desktop {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
